[gd_scene load_steps=2 format=3 uid="uid://dcfkwh7rudli8"]

[ext_resource type="Script" path="res://GUI/pause menu/pause_menu.gd" id="1_71pm5"]

[node name="Pause Menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
script = ExtResource("1_71pm5")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -65.0
offset_top = -85.5
offset_right = 65.0
offset_bottom = 85.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.38988, 1.4389)

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Resume" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="Settings" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="Restart" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Restart
"

[node name="Return" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Return to Menu"

[node name="Quit" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Quit
"

[connection signal="pressed" from="PanelContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Return" to="." method="_on_return_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
